<resources>
    <string name="app_name">Outbound Flight</string>
    <string name="astronomy_picture_of_the_day">Astronomy Picture of the Day</string>
    <string name="learn_more">LEARN MORE</string>
    <string name="three_generations_of_rovers">Three Generations on Mars</string>
    <string name="rovers">Rovers</string>
    <string name="curiosity">CURIOSITY</string>
    <string name="opportunity">OPPORTUNITY</string>
    <string name="spirit">SPIRIT</string>
    <string name="earth">EARTH</string>
    <string name="earth_day">Earth Day:</string>
    <string name="martian_sol">Martian Sol:</string>
    <string name="rover_id">Rover ID:</string>
    <string name="most_recent_photos">Most Recent Photos</string>
    <string name="least_recent_photos">Least Recent Photos</string>
    <string name="search_by_earth_day">Search By Earth Date</string>
    <string name="from_mars_to_your_phone">from Mars to your Phone</string>
    <string name="from_mars_to_your">from Mars to your</string>
    <string name="from_mars_phone">Phone</string>
    <string name="landing_date">Landing Date:</string>
    <string name="max_date">Max Date:</string>
    <string name="total_photos">Total Photos:</string>
    <string name="max_sol">Max Sol:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_rover">Name:</string>
    <string name="status">Status:</string>
    <string name="launch_date">Launch Date:</string>
    <string name="mars_rovers">Mars Rovers</string>
</resources>
