<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FragmentsActivity">
    <item
        android:id="@+id/action_most_recent"
        android:icon="@drawable/white_astronaut"
        android:orderInCategory="100"
        android:title="@string/most_recent_photos"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_least_recent"
        android:icon="@drawable/white_planet"
        android:orderInCategory="100"
        android:title="@string/least_recent_photos"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/white_rocketship"
        android:orderInCategory="100"
        android:title="@string/search_by_earth_day"
        app:showAsAction="never" />

</menu>