<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/photo_act_top_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="productions.darthplagueis.nasafeed.PhotoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/photo_act_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="450dp" />

            <LinearLayout
                android:id="@+id/photo_act_layout_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/photo_act_image"
                android:gravity="start|center_vertical"
                android:paddingBottom="20dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/photo_act_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    tools:text="@string/app_name" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/photo_act_layout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/photo_act_layout_text"
                android:gravity="start|center_vertical"
                android:paddingBottom="15dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/photo_act_full"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="@string/app_name" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/photo_act_layout_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/photo_act_layout_date"
                android:gravity="start|center_vertical"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/photo_act_colortext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingEnd="10dp"
                        android:text="@string/earth_day"
                        android:textAlignment="textStart"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/photo_act_earthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:text="@string/app_name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/photo_act_colortext01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingEnd="10dp"
                        android:text="@string/martian_sol"
                        android:textAlignment="textStart"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/photo_act_sol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:text="@string/app_name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/photo_act_colortext06"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingEnd="10dp"
                        android:text="@string/max_sol"
                        android:textAlignment="textStart"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/photo_act_maxsol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:text="@string/app_name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/photo_act_colortext02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingEnd="10dp"
                        android:text="@string/rover_id"
                        android:textAlignment="textStart"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/photo_act_rover"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:text="@string/app_name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/photo_act_colortext03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingEnd="10dp"
                        android:text="@string/landing_date"
                        android:textAlignment="textStart"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/photo_act_landing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:text="@string/app_name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/photo_act_colortext04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingEnd="10dp"
                        android:text="@string/max_date"
                        android:textAlignment="textStart"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/photo_act_maxdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:text="@string/app_name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/photo_act_colortext05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingEnd="10dp"
                        android:text="@string/total_photos"
                        android:textAlignment="textStart"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/photo_act_totalphotos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:text="@string/app_name" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>