<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context="productions.darthplagueis.nasafeed.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:elevation="20dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/main_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/main_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/main_astro_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="6dp"
                app:cardMaxElevation="10dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/main_imageview"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_alignParentTop="true" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/main_imageview"
                        android:background="@color/textviewBackgroundOpaque"
                        android:fontFamily="sans-serif-smallcaps"
                        android:padding="5dp"
                        android:text="@string/astronomy_picture_of_the_day"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/main_imageview"
                        android:gravity="center">

                        <Button
                            android:id="@+id/main_ast_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:background="@drawable/button_bg_stroke_secondary_dark"
                            android:fontFamily="sans-serif"
                            android:text="@string/learn_more"
                            android:textColor="@color/colorSecondaryDark"
                            android:textStyle="bold"
                            android:theme="@style/MyButton" />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/main_rover_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_astro_cardview"
                app:cardCornerRadius="5dp"
                app:cardElevation="6dp"
                app:cardMaxElevation="10dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/main_rover_imageview"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_alignParentTop="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/rovers" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/main_rover_imageview"
                        android:background="@color/textviewBackgroundOpaque"
                        android:fontFamily="sans-serif-smallcaps"
                        android:padding="5dp"
                        android:text="@string/three_generations_of_rovers"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/main_rover_imageview"
                        android:gravity="center">

                        <Button
                            android:id="@+id/main_rover_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:background="@drawable/button_bg_stroke_primary_dark"
                            android:fontFamily="sans-serif"
                            android:text="@string/rovers"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:theme="@style/MyButton" />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/curiosity_opp_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_rover_cardview"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/curiosity"
                    android:layout_width="0dp"
                    android:layout_height="175dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/colorSecondaryAccent"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="6dp"
                    app:cardMaxElevation="10dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/spacing">

                        <ImageView
                            android:id="@+id/img_martian"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:background="@color/colorSecondaryAccent"
                            android:padding="@dimen/spacing"
                            android:scaleType="center"
                            android:src="@drawable/white_astronaut" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_below="@+id/img_martian"
                            android:background="@drawable/button_bg_stroke_secondary_dark"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif"
                                android:text="@string/curiosity"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/opportunity"
                    android:layout_width="0dp"
                    android:layout_height="175dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="6dp"
                    app:cardMaxElevation="10dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/spacing">

                        <ImageView
                            android:id="@+id/img_saucer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:background="@color/colorAccent"
                            android:padding="@dimen/spacing"
                            android:scaleType="center"
                            android:src="@drawable/white_rocketship" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_below="@+id/img_saucer"
                            android:background="@drawable/button_bg_stroke_primary_dark"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif"
                                android:text="@string/opportunity"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/spirit_earth_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/curiosity_opp_layout"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/spirit"
                    android:layout_width="0dp"
                    android:layout_height="175dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="6dp"
                    app:cardMaxElevation="10dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/spacing">

                        <ImageView
                            android:id="@+id/img_telescope"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:background="@color/colorPrimaryDark"
                            android:padding="@dimen/spacing"
                            android:scaleType="center"
                            android:src="@drawable/white_telescope" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_below="@+id/img_telescope"
                            android:background="@drawable/button_bg_stroke_accent"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif"
                                android:text="@string/spirit"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="175dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/colorSecondaryDark"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="6dp"
                    app:cardMaxElevation="10dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/spacing">

                        <ImageView
                            android:id="@+id/img_planet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:background="@color/colorSecondaryDark"
                            android:padding="@dimen/spacing"
                            android:scaleType="center"
                            android:src="@drawable/white_planet" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_below="@+id/img_planet"
                            android:background="@drawable/button_bg_stroke_secondary_accent"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif"
                                android:text="@string/earth"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>

